# DeepAnomDetecGeomTransf

./: LICENSE  README.md  main.py  new_experiments.py  performance.py  plots.py  pyproject.toml  run_experiment.sh  scores.py  transformer.py  utils.py
uncertainty_and_cam/: gradcam.py  main.py  model.py  model_infos.py  normality_scores.py  performance.py  plots.py  run_uncertainty_analysis.sh  transformer.py  uncertainty.py  utils_data.py
