[tool.poetry]
name = "deep-anom-detec-geom-transf"
version = "0.1.0"
description = ""
authors = ["Pedro Blöss BRAGA"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.18.0"
keras = "^3.8.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scipy = "^1.15.0"
scikit-image = "^0.25.0"
opencv-python = "^4.10.0.84"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.4"
tensorflow-datasets = "^4.9.7"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
